:bug: Fix#81 Remove whitespace on mobile business card and fix vcf link

--- a/src/scss/_business-card.scss
+++ b/src/scss/_business-card.scss
@@ -24,6 +24,7 @@ $text-border-color: #969696;
     #business-card-tab{
         @include media-breakpoint-down(sm){
             overflow: hidden;
+            height: 800px;
         }
     }
 }
@@ -31,41 +32,42 @@ $text-border-color: #969696;
 @media only screen and (orientation: landscape) and (max-width: 760px){
     #business-card__scene {
         margin-top: -150px;
+        height: 200px;
         @include rotateZ-axis(-90deg);
+        margin: auto;
+        width: 48%;
+    }
+    #business-card {
+        margin-top: 150px;
     }
 }
 
-// #business-card__scene {
-//     // @include flashcard-scene($business-card-width, $business-card-height);
-// }
-
-#business-card {
-    @include flashcard();
-    width: fit-content;
-
-    position: relative;
-
+#business-card__scene {
     /* Centers business-card in the middle on any device */
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    width: 100%;
+
+    @include media-breakpoint-down(sm){
+
+        margin-top: 160px;
+        position: relative;
+    }
+
+}
+
+#business-card {
+    @include flashcard();
+    width: fit-content;
+    position: relative;
+
 
     @include media-breakpoint-down(sm){
 
         @include rotateZ-axis(-90deg);
-
-        margin-top: 60px;
+        margin-top: 30px;
         position: relative;
-        height: 640px;
-
-        /* Centers business-card in the middle on any device */
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: column;
-        width: 100%;
     }
 }
 
@@ -73,7 +75,7 @@ $text-border-color: #969696;
     @include rotateY-axis($rotate-degrees);
 
     @include media-breakpoint-down(sm){
-        transform: rotate3d(1, 1, 0, 180deg);
+        @include rotate3D(1, 1, 0, 180deg);
     }
 }
 
